Feat/sidebar redux (#697)
* Sidebar

* Sidebar

* Sidebar

* Add cache

* Clean

* Accessibilite

* Add route player

* finish

* Clean

* Doc & accessibility

* Fix tests

* Fix blanc / blanc

* Remove logs

* Purge cache during logout

* Fix navigation privee

* Add title characters

---------
